--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- section-1 -->
         <div class="second">
             <div class="second-1">
-                POWER OF IMPRESSIONS GUARANTEED  FEEL EXTREMELY
+                POWER OF IMPRESSIONS GUARANTEED FEEL EXTREMELY
             </div>
             <!-- <div class="second-2">
                
@@ -124,19 +124,39 @@
 
 
         </div>
-       <div class="f-above">
+
+        <div class="f-above">
             GALLERY
-       </div>
-       <div class="gallery-pics">
-        <div class="g-1">
-          <img src="public/images/photo-5.webp" class="photo">
         </div>
-        <div>
+
+        <div class="container">
+            <div class="gallery-pics">
+                <div class="g-1">
+                    <img src="public/images/photo-5.webp" class="g-img-1" alt="">
+                </div>
+
+                <div class="jss">
+                    <div class="top-image">
+                        <img src="public/images/photo-6.webp" alt="">
+                    </div>
+                    <div class="jv">
+                        <img src="public/images/photo-7.webp" alt="">
+                        <img src="public/images/photo-8.webp" alt="">
+                    </div>
+                </div>
+            </div>
 
         </div>
-            <!-- project end -->
-       </div>
+        <div class="footer-above">
+            <div class="f-1">
+            Do you have questions ? Suggestions ? Write to us.
+            </div>
+            <div>
+              <button class="btn-fa"><a href="#">contact</a></button>
+            </div>
+        </div>
     </div>
+    
 
 </body>
 
