add fotter and some css changes

--- a/index.html
+++ b/index.html
@@ -155,6 +155,25 @@
               <button class="btn-fa"><a href="#">contact</a></button>
             </div>
         </div>
+        <footer>
+            <div class="ftr">
+                <div class="ftr-1">
+                    <div class="ftm-1">
+                  Check us out:
+                </div>
+                <div class="ftm-2">
+                   <span><a href="https://www.facebook.com/"><img src="public/images/logo-1.jpeg" class="social-media"></a></span>
+                   <span><a href="https://www.youtube.com/"><img src="public/images/logo-2.jpeg" class="social-media"></a></span>
+                   <span><a href="https://www.instagram.com/"><img src="public/images/logo-3.jpeg" class="social-media"></a></span>
+                </div>
+                <div class="ftm-3">
+                    A website created in the <span class="ftm-3-1"> <span class="ftm-3-2" ><a href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span class="ftm-3-3" >Web</span> <span class="ftm-3-4">Wave</span></a></span> builder</span>.
+                </div>
+                </div>
+                
+
+            </div>
+        </footer>
     </div>
     
 
