add fotter and some css changes

--- a/offers.html
+++ b/offers.html
@@ -104,7 +104,7 @@
             <div class="mt-1">
                 Offroad
             </div>
-            <div class="mt-2" style="font-family: lora 400 normal">
+            <div class="mt-2">
                 In at faucibus enim, sit amet placerat mauris. Cras orci ipsum, vestibulum ac tincidunt ut, eleifend
                 quis dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et orci eu nibh interdum
                 laoreet.
