--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="offers.html">OFFER</a></li>
                 <li><a href="gallery.html">GALLERY</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><button class="btn-nav"><a href="contact.html">SIGIN UP</a></button></li>
