--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">HOME</a></li>
                         <li><a href="offers.html">OFFER</a></li>
                         <li><a href="gallery.html">GALLERY</a></li>
-                        <li><a href="#">BLOG</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
                         <li><a href="#">ABOUT US</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                         <li><button class="btn-logo"><a href="contact.html">SIGIN</a></button></li>
