--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
-    <link rel="stylesheet" href="about.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>about</title>
+  <link rel="stylesheet" href="about.css">
 </head>
+
 <body>
-    <div class="main">
+  <div class="main">
     <!-- navbar -->
     <div class="logo">
       <div class="logo-1">
@@ -23,6 +25,87 @@
           <li><a href="contact.html">CONTACT</a></li>
           <li><button class="btn-logo">SIGIN UP</button></li>
         </ul>
+
       </div>
+    </div>
+  </div>
+  <div class="about-imp">
+    <div class="tittle">
+      <div class="t-1">About us</div>
+      <div class="t-2">OUR HISTORY</div>
+    </div>
+    <div class="para-1">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut ligula condimentum est sagittis tempor. Morbi
+        ac purus pellentesque, dignissim magna ut, ultricies leo. Donec malesuada augue eget lectus tincidunt maximus.
+        Nullam tempus turpis a mi varius, pulvinar suscipit turpis maximus. Phasellus sollicitudin sapien vitae magna
+        vehicula hendrerit. Fusce et purus sed ex egestas tristique. Aliquam malesuada ullamcorper lorem. Phasellus ut
+        pulvinar ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc sit
+        amet purus non nulla faucibus tincidunt et at turpis.</p>
+    </div>
+    <div class="pic-1">
+      <div>
+        <img src="public/images/pic-1.jpg" class="hb">
+      </div>
+      <div>
+        <div class="para-2">
+          <h2>Praesent fringilla sapien ac feugiat varius.</h2>
+        </div>
+        <div class="para-3">
+          In at faucibus enim, sit amet placerat mauris. Cras orci ipsum, vestibulum ac tincidunt ut, eleifend quis
+          dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et orci eu nibh interdum laoreet.
+        </div>
+      </div>
+      <p class="para-4">Duis euismod, velit sit amet ultrices egestas.</p>
+    </div>
+    <p class="para-5">Enim eros semper quam, sed volutpat quam libero vitae libero. Vestibulum vestibulum arcu at
+      finibus accumsan. Pellentesque ac eleifend dui, a varius arcu. Ut vel sagittis nibh.</p>
+    <p class="para-5">Nullam ullamcorper ante sem, nec porttitor ipsum elementum a. Quisque aliquam odio risus, ut
+      sagittis diam vulputate quis. Aliquam ultricies velit non odio rhoncus placerat. Integer a ante ut metus blandit
+      finibus. Fusce bibendum mi sed dolor posuere ullamcorper.</p>
+
+    <div class="pic-2">
+      <div class="para-6">
+        <p>Curabitur pellentesque mi urna, ut aliquam mi volutpat porttitor. Etiam pulvinar, ipsum a pretium iaculis,
+          enim risus pulvinar purus, quis varius nibh magna sed dui. Proin vehicula diam nulla, et tincidunt dolor
+          fermentum sit amet.
+
+          Vestibulum suscipit congue lorem et hendrerit. Proin faucibus velit leo, varius rutrum orci porttitor sed.
+          Praesent in ipsum accumsan, rhoncus leo in, pellentesque ipsum.</p>
+      </div>
+      <div>
+        <img src="public/images/pic-2.jpg" class="hb-2">
+      </div>
+
+    </div>
+    <p class="para-7">Fusce porta tincidunt odio, sit amet sollicitudin turpis rutrum consequat. Morbi sapien nisl,
+      euismod ut est eu, molestie hendrerit tellus. Aenean rhoncus congue ante, faucibus hendrerit odio vulputate eu.
+      Fusce laoreet orci ultricies mauris fermentum venenatis. Sed vel tellus id ex posuere volutpat. Nulla a sodales
+      augue, non congue risus. Etiam a gravida orci. Nam ornare faucibus odio. Sed id ex ut mauris molestie viverra.
+      Donec quam lorem, pellentesque et nibh non, hendrerit congue mi. Sed eu tincidunt sapien, vel commodo tortor.</p>
+
+  </div>
+  <!-- footer -->
+  <footer>
+    <div class="ftr">
+      <div class="ftr-1">
+        <div class="ftm-1">
+          Check us out:
+        </div>
+        <div class="ftm-2">
+          <span><a href="https://www.facebook.com/"><img src="public/images/logo-1.jpeg"
+                class="social-media"></a></span>
+          <span><a href="https://www.youtube.com/"><img src="public/images/logo-2.jpeg" class="social-media"></a></span>
+          <span><a href="https://www.instagram.com/"><img src="public/images/logo-3.jpeg"
+                class="social-media"></a></span>
+        </div>
+        <div class="ftm-3">
+          A website created in the <span class="ftm-3-1"> <span class="ftm-3-2"><a
+                href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span class="ftm-3-3">Web</span>
+                <span class="ftm-3-4">Wave</span></a></span> builder</span>.
+        </div>
+
+      </div>
+    </div>
 </body>
+
 </html>
