--- a/about.html
+++ b/about.html
@@ -15,17 +15,16 @@
       <div class="logo-1">
         <img src="public/images/logo.webp">
       </div>
-      <div class="jst">
+       <div class="jst">
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="offers.html">OFFER</a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-          <li><button class="btn-logo">SIGIN UP</button></li>
+          <li><a href="index.html" class="tabs">HOME</a></li>
+          <li><a href="offers.html" class="tabs">OFFER</a></li>
+          <li><a href="gallery.html" class="tabs">GALLERY</a></li>
+          <li><a href="blog.html" class="tabs">BLOG</a></li>
+          <li><a href="about" class="tabs">ABOUT US</a></li>
+          <li><a href="contact.html" class="tabs">CONTACT</a></li>
+          <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
         </ul>
-
       </div>
     </div>
   </div>
@@ -92,10 +91,10 @@
           Check us out:
         </div>
         <div class="ftm-2">
-          <span><a href="https://www.facebook.com/"><img src="public/images/logo-1.jpeg"
+          <span><a href="https://www.facebook.com/"><img src="public/images/icon-1.png"
                 class="social-media"></a></span>
-          <span><a href="https://www.youtube.com/"><img src="public/images/logo-2.jpeg" class="social-media"></a></span>
-          <span><a href="https://www.instagram.com/"><img src="public/images/logo-3.jpeg"
+          <span><a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"></a></span>
+          <span><a href="https://www.instagram.com/"><img src="public/images/icon-3.png"
                 class="social-media"></a></span>
         </div>
         <div class="ftm-3">
