--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,13 @@
             </div>
             <div class="jst">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="offers.html">OFFER</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><button class="btn-logo">SIGIN UP</button></li>
+                     <li><a href="index.html" class="tabs">HOME</a></li>
+                <li><a href="offers.html" class="tabs">OFFER</a></li>
+                <li><a href="gallery.html" class="tabs">GALLERY</a></li>
+                <li><a href="blog.html" class="tabs">BLOG</a></li>
+                <li><a href="#" class="tabs">ABOUT US</a></li>
+                <li><a href="contact.html" class="tabs">CONTACT</a></li>
+                    <div><a href="#" class="btn-logo">SIGN IN</a></div>
                 </ul>
             </div>
 
@@ -64,16 +64,17 @@
       <div class="bt">
         <button class="btn-con"><a href="">SEND</a></button>
       </div> 
-      <footer>
+      
+ <footer>
             <div class="ftr">
                 <div class="ftr-1">
                     <div class="ftm-1">
                   Check us out:
                 </div>
                 <div class="ftm-2">
-                   <span><a href="https://www.facebook.com/"><img src="public/images/logo-1.jpeg" class="social-media"></a></span>
-                   <span><a href="https://www.youtube.com/"><img src="public/images/logo-2.jpeg" class="social-media"></a></span>
-                   <span><a href="https://www.instagram.com/"><img src="public/images/logo-3.jpeg" class="social-media"></a></span>
+                   <span><a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="social-media-2"></a></span>
+                   <span><a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"></a></span>
+                   <span><a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="social-media-1"></a></span>
                 </div>
                 <div class="ftm-3">
                     A website created in the <span class="ftm-3-1"> <span class="ftm-3-2" ><a href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span class="ftm-3-3" >Web</span> <span class="ftm-3-4">Wave</span></a></span> builder</span>.
