--- a/offers.html
+++ b/offers.html
@@ -15,17 +15,17 @@
         <div class="logo">
             <img src="public/images/logo.webp">
         </div>
-        <div class="nav-btn">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="offers.html">OFFER</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><button class="btn-nav">SIGIN UP</button></li>
-            </ul>
-        </div>
+          <div class="nav-btn">
+                <ul>
+                     <li><a href="index.html" class="tabs">HOME</a></li>
+                <li><a href="offers.html" class="tabs">OFFER</a></li>
+                <li><a href="gallery.html" class="tabs">GALLERY</a></li>
+                <li><a href="blog.html" class="tabs">BLOG</a></li>
+                <li><a href="about.html" class="tabs">ABOUT US</a></li>
+                <li><a href="contact.html" class="tabs">CONTACT</a></li>
+                    <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
+                </ul>
+            </div>
     </div>
     <!-- main -->
     <div class="main-1">
@@ -56,7 +56,7 @@
            </div>
            <div class="mt-7">
             <button class="btn">
-                <a href="">SIG IN</a>
+                <a href="contact.html">SIG IN</a>
             </button>
            </div>
         </div>
@@ -90,7 +90,7 @@
            </div>
            <div class="mt-7">
             <button class="btn">
-                <a href="">SIG IN</a>
+                <a href="contact.html">SIG IN</a>
             </button>
            </div>
         </div>
@@ -124,7 +124,7 @@
            </div>
            <div class="mt-7">
             <button class="btn">
-                <a href="#">SIG IN</a>
+                <a href="contact.html">SIG IN</a>
             </button>
            </div>
         </div>
@@ -135,11 +135,13 @@
                     <div class="ftm-1">
                   Check us out:
                 </div>
-                <div class="ftm-2">
-                   <span><a href="https://www.facebook.com/"><img src="public/images/logo-1.jpeg" class="social-media"></a></span>
-                   <span><a href="https://www.youtube.com/"><img src="public/images/logo-2.jpeg" class="social-media"></a></span>
-                   <span><a href="https://www.instagram.com/"><img src="public/images/logo-3.jpeg" class="social-media"></a></span>
-                </div>
+                 <div class="ftm-2">
+          <span><a href="https://www.facebook.com/"><img src="public/images/icon-1.png"
+                class="social-media"></a></span>
+          <span><a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"></a></span>
+          <span><a href="https://www.instagram.com/"><img src="public/images/icon-3.png"
+                class="social-media-3"></a></span>
+        </div>
                 <div class="ftm-3">
                     A website created in the <span class="ftm-3-1"> <span class="ftm-3-2" ><a href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span class="ftm-3-3" >Web</span> <span class="ftm-3-4">Wave</span></a></span> builder</span>.
                 </div>
