--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
                 <li><a href="offers.html" class="tabs">OFFER</a></li>
                 <li><a href="gallery.html" class="tabs">GALLERY</a></li>
                 <li><a href="blog.html" class="tabs">BLOG</a></li>
-                <li><a href="#" class="tabs">ABOUT US</a></li>
+                <li><a href="about.html" class="tabs">ABOUT US</a></li>
                 <li><a href="contact.html" class="tabs">CONTACT</a></li>
-                    <div><a href="#" class="btn-logo">SIGN IN</a></div>
+                    <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
                 </ul>
             </div>
 
