--- a/index.html
+++ b/index.html
@@ -2,188 +2,132 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMPLE WEB PAGE</title>
-    <link rel="stylesheet" href="index.css">
-
-
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-    <div>
-        <div class="main">
-            <!-- navbar -->
-            <div class="logo">
-                <div class="logo-1">
-                    <img src="public/images/logo.webp">
-                </div>
-                <div>
-                    <ul>
-                        <li> <a href="#" class="tabs"> HOME</a></li>
-                        <li><a href="offers.html" class="tabs">OFFER</a></li>
-                        <li><a href="gallery.html" class="tabs">GALLERY</a></li>
-                        <li><a href="blog.html" class="tabs">BLOG</a></li>
-                        <li><a href="about" class="tabs">ABOUT US</a></li>
-                        <li><a href="contact.html" class="tabs">CONTACT</a></li>
-                        <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
-
-                    </ul>
-                </div>
+    <div class="main">
+        <!-- Navbar -->
+        <div class="logo">
+            <div class="logo-1">
+                <img src="public/images/logo.webp" alt="Logo" />
             </div>
-            <!-- Landing page -->
-            <section class="landing-page-content">
-                <div class="tittle">
-                    Adventurers
-                </div>
-                <div class="sub">
-                    Let yourself be impressed
-                </div>
-                <div class="su">
-                    <a href="contact.html" class="btn-2">SIGN IN</a>
-                </div>
-
-            </section>
-
-        </div>
-        <!-- section-1 -->
-        <div class="second">
-            <div class="second-1">
-                POWER OF IMPRESSIONS GUARANTEED FEEL EXTREMELY
-            </div>
-            <!-- <div class="second-2">
-               
-            </div> -->
-            <div class="second-3">
-                Curabitur sit amet purus semper tortor tempor lacinia eu in tortor. Integer nisl risus,
-            </div>
-            <div class="second-4">
-                condimentum sed lacinia in, tincidunt eget mi. Praesent finibus mollis blandit.
-
-            </div>
-            <div class="second-5">
-                Suspendisse vulputate turpis et erat iaculis viverra.
-            </div>
-            <div class="second-6">
-                Curabitur sit amet purus semper <span><a href="#top" class="link">Tortor Tempor</a></span>
-            </div>
-        </div>
-        <!-- section-2 -->
-        <div class="slide-3">
-            <div class="man">
-                <img src="public/images/slide-3.webp" alt="">
-            </div>
-            <div class="matter">
-                <div class="mtr-1">
-                    ROCK CLIMBING
-                </div>
-                <div class="mtr-2">
-                    Curabitur sit amet purus semper tortor tempor
-                </div>
-                <div class="mtr-3">
-                    lacinia eu in tortor. Integer nisl risus,
-                </div>
-                <div class="mtr-4">
-                    condimentum sed lacinia in.
-                </div>
-                <div>
-                    <button class="mbtn-4">
-                        <a href="0">SIG IN</a>
-                    </button>
-                </div>
-            </div>
-
-
+            <nav>
+                <ul>
+                    <li><a href="#" class="tabs">HOME</a></li>
+                    <li><a href="offers.html" class="tabs">OFFER</a></li>
+                    <li><a href="gallery.html" class="tabs">GALLERY</a></li>
+                    <li><a href="blog.html" class="tabs">BLOG</a></li>
+                    <li><a href="about.html" class="tabs">ABOUT US</a></li>
+                    <li><a href="contact.html" class="tabs">CONTACT</a></li>
+                    <li><a href="contact.html" class="btn-logo">SIGN UP</a></li>
+                </ul>
+            </nav>
         </div>
 
-        <div class="slide-4">
-            <div>
-                <div class="matter-1">
-                    <div class="mtr-1">
-                        EXTREME OFFROAD
-                    </div>
-                    <div class="mtr-2">
-                        Curabitur sit amet purus semper tortor tempor
-                    </div>
-                    <div class="mtr-3">
-                        lacinia eu in tortor. Integer nisl risus,
-                    </div>
-                    <div class="mtr-4">
-                        condimentum sed lacinia in.
-                    </div>
-                    <div>
-                        <button class="mbtn-4">
-                            <a href="0">SIG IN</a>
-                        </button>
-                    </div>
-                </div>
+        <!-- Landing Page -->
+        <section class="landing-page-content">
+            <div class="tittle">Adventurers</div>
+            <div class="sub">Let yourself be impressed</div>
+            <div class="su">
+                <a href="contact.html" class="btn-2">SIGN UP</a>
             </div>
-            <div class="matter-2">
-                <img src="public/images/slide-4.webp" class="img-1">
-            </div>
-
-
-        </div>
-
-        <div class="f-above">
-            GALLERY
-        </div>
-
-        <div class="container">
-            <div class="gallery-pics">
-                <div class="g-1">
-                    <img src="public/images/photo-5.webp" class="g-img-1" alt="">
-                </div>
-
-                <div class="jss">
-                    <div class="top-image">
-                        <img src="public/images/photo-6.webp" alt="">
-                    </div>
-                    <div class="jv">
-                        <img src="public/images/photo-7.webp" alt="">
-                        <img src="public/images/photo-8.webp" alt="">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <div class="footer-above">
-            <div class="f-1">
-                Do you have questions ? Suggestions ? Write to us.
-            </div>
-            <div>
-                <button class="btn-fa"><a href="#">contact</a></button>
-            </div>
-        </div>
-        <footer>
-            <div class="ftr">
-                <div class="ftr-1">
-                    <div class="ftm-1">
-                        Check us out:
-                    </div>
-                    <div class="ftm-2">
-                        <span><a href="https://www.facebook.com/"><img src="public/images/icon-1.png"
-                                    class="social-media-2"></a></span>
-                        <span><a href="https://www.youtube.com/"><img src="public/images/icon-2.png"
-                                    class="social-media"></a></span>
-                        <span><a href="https://www.instagram.com/"><img src="public/images/icon-3.png"
-                                    class="social-media-1"></a></span>
-                    </div>
-                    <div class="ftm-3">
-                        A website created in the <span class="ftm-3-1"> <span class="ftm-3-2"><a
-                                    href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span
-                                        class="ftm-3-3">Web</span> <span class="ftm-3-4">Wave</span></a></span>
-                            builder</span>.
-                    </div>
-
-                </div>
-
-
-            </div>
-        </footer>
+        </section>
     </div>
 
+    <!-- Section 1 -->
+    <div class="second">
+        <div class="second-1">POWER OF IMPRESSIONS GUARANTEED FEEL EXTREMELY</div>
+        <div class="second-3">Curabitur sit amet purus semper tortor tempor lacinia eu in tortor. Integer nisl risus,
+        </div>
+        <div class="second-4">condimentum sed lacinia in, tincidunt eget mi. Praesent finibus mollis blandit.</div>
+        <div class="second-5">Suspendisse vulputate turpis et erat iaculis viverra.</div>
+        <div class="second-6">Curabitur sit amet purus semper <span><a href="#top" class="link">Tortor Tempor</a></span>
+        </div>
+    </div>
 
+    <!-- Section 2 -->
+    <div class="slide-3">
+        <div class="man">
+            <img src="public/images/slide-3.webp" alt="Rock Climbing" />
+        </div>
+        <div class="matter">
+            <div class="mtr-1">ROCK CLIMBING</div>
+            <div class="mtr-2">Curabitur sit amet purus semper tortor tempor</div>
+            <div class="mtr-3">lacinia eu in tortor. Integer nisl risus,</div>
+            <div class="mtr-4">condimentum sed lacinia in.</div>
+            <a href="#" class="mbtn-4">SIGN IN</a>
+        </div>
+    </div>
+
+    <div class="slide-4">
+        <div class="matter-1">
+            <div class="mtr-1">EXTREME OFFROAD</div>
+            <div class="mtr-2">Curabitur sit amet purus semper tortor tempor</div>
+            <div class="mtr-3">lacinia eu in tortor. Integer nisl risus,</div>
+            <div class="mtr-4">condimentum sed lacinia in.</div>
+            <a href="#" class="mbtn-4">SIGN IN</a>
+        </div>
+        <div class="matter-2">
+            <img src="public/images/slide-4.webp" class="img-1" alt="Offroad Image" />
+        </div>
+    </div>
+
+    <div class="f-above">GALLERY</div>
+
+    <div class="container">
+        <div class="gallery-pics">
+            <div class="g-1">
+                <img src="public/images/photo-5.webp" class="g-img-1" alt="Gallery 1" />
+            </div>
+
+            <div class="jss">
+                <div class="top-image">
+                    <img src="public/images/photo-6.webp" alt="Gallery 2" />
+                </div>
+                <div class="jv">
+                    <img src="public/images/photo-7.webp" alt="Gallery 3" />
+                    <img src="public/images/photo-8.webp" alt="Gallery 4" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-above">
+        <div class="f-1">Do you have questions? Suggestions? Write to us.</div>
+        <a href="#" class="btn-fa">Contact</a>
+    </div>
+
+    <footer>
+        <div class="ftr">
+            <div class="ftr-1">
+                <div class="ftm-1">Check us out:</div>
+                <div class="ftm-2">
+                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="social-media-2"
+                            alt="Facebook" /></a>
+                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"
+                            alt="YouTube" /></a>
+                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="social-media-1"
+                            alt="Instagram" /></a>
+                </div>
+                <div class="ftm-3">
+                    A website created in the
+                    <span class="ftm-3-1">
+                        <span class="ftm-3-2">
+                            <a href="https://webwave.me/?utm_medium=wwown&utm_source=footer">
+                                <span class="ftm-3-3">DORA</span>
+                                <span class="ftm-3-4">BABU</span>
+                            </a>
+                        </span>
+                    </span>
+                    builder.
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
