--- a/blog.html
+++ b/blog.html
@@ -21,14 +21,13 @@
           <li><a href="offers.html" class="tabs">OFFER</a></li>
           <li><a href="gallery.html" class="tabs">GALLERY</a></li>
           <li><a href="blog.html" class="tabs">BLOG</a></li>
-          <li><a href="about" class="tabs">ABOUT US</a></li>
+          <li><a href="about.html" class="tabs">ABOUT US</a></li>
           <li><a href="contact.html" class="tabs">CONTACT</a></li>
           <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
         </ul>
       </div>
 
-
-    </div>
+ </div>
     <div class="landpage-content">
       <div class="lc-1">
         Travel with us
@@ -113,16 +112,16 @@
                 Check us out:
               </div>
               <div class="ftm-2">
-                <span><a href="https://www.facebook.com/"><img src="public/images/icon-1.png"
-                      class="social-media-2"></a></span>
-                <span><a href="https://www.youtube.com/"><img src="public/images/icon-2.png"
-                      class="social-media"></a></span>
-                <span><a href="https://www.instagram.com/"><img src="public/images/icon-3.png"
-                      class="social-media-1"></a></span>
-              </div>
+                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="facebook"
+                            alt="Facebook" /></a>
+                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="youtube"
+                            alt="YouTube" /></a>
+                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="insta"
+                            alt="Instagram" /></a>
+                </div>
               <div class="ftm-3">
                 A website created in the <span class="ftm-3-1"> <span class="ftm-3-2"><a
-                      href="https://webwave..me/?utm_medium=wwown&utm_source=footer"><span class="ftm-3-3">Web</span>
+                      href="dora.html"><span class="ftm-3-3">Web</span>
                       <span class="ftm-3-4">Wave</span></a></span> builder</span>.
               </div>
 
@@ -133,6 +132,8 @@
         </footer>
 
       </div>
+    </div>
+    
 
 </body>
 
