--- a/gallery.html
+++ b/gallery.html
@@ -22,9 +22,9 @@
                 <li><a href="offers.html" class="tabs">OFFER</a></li>
                 <li><a href="gallery.html" class="tabs">GALLERY</a></li>
                 <li><a href="blog.html" class="tabs">BLOG</a></li>
-                <li><a href="#" class="tabs">ABOUT US</a></li>
+                <li><a href="about.html" class="tabs">ABOUT US</a></li>
                 <li><a href="contact.html" class="tabs">CONTACT</a></li>
-                <div><a href="#" class="btn-logo">SIGN IN</a></div>
+                <div><a href="contact.html" class="btn-logo">SIGN IN</a></div>
                 
             </ul>
         </div>
@@ -109,18 +109,18 @@
             <div class="ftr-1">
                 <div class="ftm-1">Check us out:</div>
                 <div class="ftm-2">
-                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="social-media-2"
+                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="facebook"
                             alt="Facebook" /></a>
-                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"
+                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="youtube"
                             alt="YouTube" /></a>
-                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="social-media-1"
+                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="insta"
                             alt="Instagram" /></a>
                 </div>
                 <div class="ftm-3">
                     A website created in the
                     <span class="ftm-3-1">
                         <span class="ftm-3-2">
-                            <a href="https://webwave.me/?utm_medium=wwown&utm_source=footer">
+                            <a href="dora.html">
                                 <span class="ftm-3-3">DORA</span>
                                 <span class="ftm-3-4">BABU</span>
                             </a>
