--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         <div class="ftr">
             <div class="ftr-1">
                 <div class="ftm-1">Check us out:</div>
-                <div class="ftm-2">
-                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="social-media-2"
+               <div class="ftm-2">
+                    <a href="https://www.facebook.com/"><img src="public/images/icon-1.png" class="facebook"
                             alt="Facebook" /></a>
-                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="social-media"
+                    <a href="https://www.youtube.com/"><img src="public/images/icon-2.png" class="youtube"
                             alt="YouTube" /></a>
-                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="social-media-1"
+                    <a href="https://www.instagram.com/"><img src="public/images/icon-3.png" class="insta"
                             alt="Instagram" /></a>
                 </div>
                 <div class="ftm-3">
                     A website created in the
                     <span class="ftm-3-1">
                         <span class="ftm-3-2">
-                            <a href="https://webwave.me/?utm_medium=wwown&utm_source=footer">
+                            <a href="dora.html">
                                 <span class="ftm-3-3">DORA</span>
                                 <span class="ftm-3-4">BABU</span>
                             </a>
